# user_ineterface

./: ARCHITECTURE_DIAGRAM.md  CLEAN_SYSTEM_GUIDE.md  COMPLETE_SYSTEM_GUIDE.md  DUAL_JSON_ROS2_INTEGRATION_GUIDE.md  FINAL_FONT_FIX_REPORT.md  FINAL_PROBLEM_SOLUTION.md  FINAL_STATUS.md  FINAL_SYSTEM_GUIDE.md  FONT_DISPLAY_FIX_REPORT.md  INTEGRATED_MEDICINE_FORM_GUIDE.md  LATEST_COMPLETE_SYSTEM_README.md  PACKAGE_DOCUMENTATION.md  PROBLEM_DIAGNOSIS_REPORT.md  PROJECT_STRUCTURE.md  QUICK_PACKAGE_REFERENCE.md  README.md  README_Chinese.md  README_FINAL.md  README_IMPROVED_LAYOUT.md  README_PROCESS.md  README_ROS2_ARCHITECTURE.md  README_SIMPLE.md  README_SQL.md  README_STABLE.md  ROS2_YAML_ORDER_SYSTEM_GUIDE.md  SYSTEM_SIMPLIFIED.md  SYSTEM_STATUS.md  camera2base.py  camera2base_backup.py  camera2base_improved.py  grasp_estimator.py  grasp_estimator_backup.py  grasp_estimator_improved.py  medicine_order_output.yaml  requirements.txt  requirements_simple.txt  requirements_sql.txt  ros2_integration_example.py  ros2_yaml_generator_node.py  simple_test_no_deps.py  (+12 more)
backup_before_cleanup/user_interface/: ESSENTIAL_FILES_FOR_ROS2.md  MEDICINE_DETAIL_SERVICE_GUIDE.md  ORDER_FLOW_GUIDE.md  ROS2_SETUP_INSTRUCTIONS.md  cleanup_for_ros2_only.py  cleanup_unnecessary_files.py  database_final.py  integration_example.py  medicine_client_example.py  ros2_services_interface.py  start_complete_system.py  your_ros2_node.py
broken_files_backup/: integration_with_your_node.py  medicine_detail_service_node.py  ros2_interface_final.py  ros2_order_pusher.py  test_order_flow.py
order/: package.xml  setup.py
order/order/: ros2_interface_final.py  ros2_order_pusher.py
qt_medicine_system/: README.md  SYSTEM_SUMMARY.md  data_manager.py  main.py  medicine_dialog.py  prescription_dialog.py  requirements.txt  ros2_interface.py  settings_dialog.py  start_system.py  test_system.py
qt_medicine_system/data/: medicines.yaml  prescriptions.yaml
ros2_packages/medicine_basic_provider/: package.xml
ros2_packages/medicine_client/: package.xml
ros2_packages/medicine_info_provider/: package.xml
ros2_packages/medicine_interfaces/: CMakeLists.txt  package.xml
ros2_packages/medicine_interfaces/msg/: MedicineBasic.msg  MedicineDetailed.msg
ros2_packages/medicine_interfaces/srv/: GetMedicineInfo.srv  MedicineOrder.srv
ros2_packages/medicine_management_client/: package.xml  setup.py
ros2_packages/medicine_management_client/medicine_management_client/: __init__.py  medicine_management_client.py
ros2_packages/medicine_order_processor/: package.xml
ros2_packages/medicine_order_service/: CMakeLists.txt  package.xml
ros2_packages/medicine_order_service/scripts/: order_service_node.py  single_order_service_node.py
tm_robot_if/: CMakeLists.txt  package.xml
tm_robot_if/srv/: BasicMedInfo.srv  CompleteOrder.srv  DetailMedInfo.srv  GetNextOrder.srv
user_interface/: ALL_PACKAGES_FUNCTIONALITY.md  CLEANUP_SUMMARY.md  CompletionReportService.srv  ESSENTIAL_FILES_ANALYSIS.md  ESSENTIAL_FILES_LIST.md  FINAL_FILE_LIST.md  FINAL_SYSTEM_GUIDE.md  INTEGRATION_GUIDE.md  LOCAL_SETUP.md  MEDICAL_SYSTEM_IMPLEMENTATION.md  MINIMAL_SYSTEM_FILES.md  MedicalDataService.srv  MedicineService.srv  PACKAGES_QUICK_REFERENCE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_CLEAN.md  README_FINAL.md  README_MINIMAL.md  README_NO_EMOJI.md  ROS2_MEDICINE_SYSTEM_GUIDE.md  ROS2_NODE_SUMMARY.md  ROS2_PACKAGE_GUIDE.md  ROS2_SERVICES_GUIDE.md  ROS2_THREE_SERVICES_GUIDE.md  SYSTEM_GUIDE.md  SYSTEM_OVERVIEW.md  USER_GUIDE.md  WEB_ROS2_ARCHITECTURE.md  WORKING_SYSTEM_GUIDE.md  YOUR_ROS2_GUIDE.md  api_client_examples.py  basic_test.py  chinese_test.py  clean_hospital_medicine.db  clean_hospital_system.py  clean_test_system.py  cleanup_system.py  clear_database.py  (+130 more)
user_interface/api/: __init__.py  medical_record_api.py  medicine_api.py  prescription_api.py
user_interface/data/: basic_medicines.yaml  detailed_medicines.json  detailed_medicines.yaml  hospital_management.db  medicine_basic_data.json  medicine_detailed_data.json  medicines.json  prescription_data.json  prescription_status.json  prescriptions.json  prescriptions.yaml  ros2_basic_medicines.yaml  ros2_detailed_medicines.yaml
user_interface/database/: database.py  medicine_db.py  prescription_db.py
user_interface/ros2_services/: CMakeLists.txt  medicine_client_example.py  medicine_service_node.py  package.xml
user_interface/ros2_services/msg/: MedicineBasicInfo.msg  MedicineDetailedInfo.msg
user_interface/ros2_services/srv/: GetBasicMedicine.srv  GetDetailedMedicine.srv
(+58 files in other folders)
