cmake_minimum_required(VERSION 3.8)
project(hospital_medicine_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

# Message and service files
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/MedicineBasicInfo.msg"
  "msg/MedicineDetailedInfo.msg"
  "srv/GetBasicMedicine.srv"
  "srv/GetDetailedMedicine.srv"
  DEPENDENCIES builtin_interfaces std_msgs
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_dependencies(rosidl_default_runtime)
ament_package()